--- a/Project.toml
+++ b/Project.toml
@@ -20,7 +20,7 @@ SolidStateDetectors = "71e43887-2bd9-5f77-aebd-47f656f0a3f0"
 [compat]
 BAT = "3"
 LegendDSP = "0.2.0"
-LegendDataManagement = "0.2.8"
+LegendDataManagement = "0.2.8, 0.3"
 LegendDataTypes = "0.1"
 LegendEventAnalysis = "0.1"
 LegendHDF5IO = "0.1"
